@@ -2,6 +2,7 @@ version 0.9.0-beta2 - XX-Jan-2010
  . Actions: added 2 new instant actions: FlipX and FlipY (counter-rollback of part issue #620)
  . Actions: uses FLT_EPSILON constant (issue #701)
  . Actions: prevent jerk in Repeat and RepeatForEver (issue #390)
+ . Actions: RotateTo can be repeated without losing information (issue #705)
  . BitmapFontAtlas: doesn't override color when using setString (issue #610)
  . Chipmunk: removed compiler warning on chipmunk demo (issue #680)
  . CocosLive: added sanity checks on demo (issue #681)
